@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+20-Jun-2002
+~~~~~~~~~~~
+Bugfix: Using another window in between entering target mode and selecting
+	the target printed a warning instead of performing the operation.
+
 17-Jun-2002
 ~~~~~~~~~~~
 Fix problem with root menu positioning on icewm (reported by Bernard Jungen).
